--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ packages = [{include = "rberga06", from = "src"}]
 python = "^3.11"
 rich = "^13.4.1"
 typer = "^0.9.0"
-cython = {version = "^3.0.0b3", allow-prereleases = true, optional = true}
+cython = {version = "^3.0.0b3", allow-prereleases = true}
 numpy = "^1.24.3"
 
 [tool.poetry.build]
@@ -19,11 +19,8 @@ script = "build.py"
 generate-setup-file = true
 
 [tool.poetry.scripts]
-matrix = "rberga06.matrix.main:app"
-
-[tool.poetry.extras]
-cython = ["cython"]
+matrix = "rberga06.matrix.matrix:main"
 
 [build-system]
-requires = ["poetry-core", "setuptools"]
+requires = ["poetry-core", "setuptools", "cython"]
 build-backend = "poetry.core.masonry.api"
